; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_ssautil.c_get_fields.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_ssautil.c_get_fields.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (i8*, i32)* @get_fields to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @get_fields(i8* %0, i32 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %17, label %12

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12, %2
  store i8** null, i8*** %3, align 8
  br label %65

18:                                               ; preds = %12
  store i32 1, i32* %6, align 4
  %19 = load i8*, i8** %4, align 8
  store i8* %19, i8** %8, align 8
  br label %20

20:                                               ; preds = %24, %18
  %21 = load i8*, i8** %8, align 8
  %22 = call i8* @strchr(i8* %21, i8 signext 44)
  store i8* %22, i8** %8, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %29

24:                                               ; preds = %20
  %25 = load i32, i32* %6, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %6, align 4
  %27 = load i8*, i8** %8, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %8, align 8
  br label %20

29:                                               ; preds = %20
  %30 = load i32, i32* %5, align 4
  %31 = icmp sgt i32 %30, 0
  br i1 %31, label %32, label %38

32:                                               ; preds = %29
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* %5, align 4
  %35 = icmp sgt i32 %33, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %32
  %37 = load i32, i32* %5, align 4
  store i32 %37, i32* %6, align 4
  br label %38

38:                                               ; preds = %36, %32, %29
  %39 = load i32, i32* %6, align 4
  %40 = add nsw i32 %39, 1
  %41 = call i8** @calloc(i32 %40, i32 8)
  store i8** %41, i8*** %9, align 8
  %42 = load i8*, i8** %4, align 8
  store i8* %42, i8** %8, align 8
  store i32 0, i32* %7, align 4
  br label %43

43:                                               ; preds = %54, %38
  %44 = load i32, i32* %7, align 4
  %45 = load i32, i32* %6, align 4
  %46 = sub nsw i32 %45, 1
  %47 = icmp slt i32 %44, %46
  br i1 %47, label %48, label %57

48:                                               ; preds = %43
  %49 = call i8* @get_field(i8** %8)
  %50 = load i8**, i8*** %9, align 8
  %51 = load i32, i32* %7, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i8*, i8** %50, i64 %52
  store i8* %49, i8** %53, align 8
  br label %54

54:                                               ; preds = %48
  %55 = load i32, i32* %7, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %7, align 4
  br label %43

57:                                               ; preds = %43
  %58 = load i8*, i8** %8, align 8
  %59 = call i8* @strdup(i8* %58)
  %60 = load i8**, i8*** %9, align 8
  %61 = load i32, i32* %7, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i8*, i8** %60, i64 %62
  store i8* %59, i8** %63, align 8
  %64 = load i8**, i8*** %9, align 8
  store i8** %64, i8*** %3, align 8
  br label %65

65:                                               ; preds = %57, %17
  %66 = load i8**, i8*** %3, align 8
  ret i8** %66
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i8** @calloc(i32, i32) #1

declare dso_local i8* @get_field(i8**) #1

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
